fix linter errors

--- a/app/views/layouts/mailer.css
+++ b/app/views/layouts/mailer.css
@@ -1,4 +1,5 @@
-/* stylelint-enable indentation, no-missing-end-of-source-newline */
+/* stylelint-disable  indentation */
+/* stylelint-disable  no-missing-end-of-source-newline */
 
 body {
     padding: 0;
